# Dental-X-Ray-Cavity-Detection

./: .bandit  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NEXT_STEPS_COMPLETE.md  README.md  SETUP_SUMMARY.md  TEAM_GUIDE.md  TEAM_ONBOARDING.md  TEAM_SETUP.md  app.py  docker-compose.yml  environment.yml  pyproject.toml  quick_start.sh  requirements-dev.txt  requirements.txt  run_next_steps.sh  setup_dev.sh  test_docker.sh  test_pipeline.py  train_yolov12_quick.py
.github/workflows/: ci-cd.yml  train.yml
data/processed/: dataset.yaml
data/processed/test/: labels.cache
data/processed/train/: labels.cache
data/processed/val/: labels.cache
data/raw/object_detection_labels/: p1.txt  p12.txt  p14.txt  p16.txt  p18.txt  p19.txt  p22.txt  p27.txt  p28.txt  p32.txt  p35.txt  p36.txt  p37.txt  p38.txt  p43.txt  p44.txt  p45.txt  p46.txt  p48.txt  p49.txt  p5.txt  p51.txt  p53.txt  p56.txt  p57.txt  p61.txt  p63.txt  p64.txt  p67.txt  p71.txt  p72.txt  p73.txt  p8.txt  p9.txt
models/: yolov12_metrics.json  yolov8_metrics.json
notebooks/: 01_data_exploration.ipynb  01_prepare_dataset.ipynb  02_train_yolov8.ipynb  03_train_yolov12.ipynb  04_compare_metrics.ipynb
runs/detect/yolov12_dental/: args.yaml
runs/detect/yolov12_dental2/: args.yaml
runs/yolov8_local/: args.yaml
scripts/: deploy_to_hf.sh
src/app/: app.py  inference.py  inference_old.py
src/data_prep/: convert_to_yolo_format.py  split_dataset.py  utils.py
src/evaluation/: benchmark.py
src/training/: train_yolov8.py
tests/: __init__.py  conftest.py  test_basic.py
(+66 files in other folders)
